Fix border spacing in footer

--- a/css/common.css
+++ b/css/common.css
@@ -149,6 +149,7 @@ footer {
 }
 .donate-wrap hr {
   border-color: #666;
+  margin:0;
 }
 .donate-wrap .container {
   padding-top: 20px;
